--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 
 /* Background Images */
 #nighttimeForestBackground {
-	background-image: url("../images/misty.forest.night.jpg");
+	background-image: url("../assets/images/misty.forest.night.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 100%;
@@ -59,7 +59,7 @@ body {
 }
 
 #daytimeForestBackground {
-	background-image: url("../images/misty.forest.day.jpg");
+	background-image: url("../assets/images/misty.forest.day.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 100%;
